--- a/data/style/_main.scss
+++ b/data/style/_main.scss
@@ -7,10 +7,10 @@ $md: rem(18px);
 $lg: rem(24px);
 
 .titlebar {
-	background-color: #{"@bg_color"};
-	background-image: none;
-	box-shadow: none;
-    
+    background-color: #{"@bg_color"};
+    background-image: none;
+    box-shadow: none;
+
     .refresh-button {
         &.refresh-animation image {
             animation-name: rotate;
@@ -26,63 +26,63 @@ $lg: rem(24px);
 }
 
 .screen {
-    &-error {        
+    &-error {
         padding: $lg;
-        
+
         .alert {
             background-color: transparent;
         }
     }
-    
+
     &-docker-container {
         background-color: #{"@bg_color"};
-        
+
         .top-bar {
             margin: $lg;
-            
+
             .container-name {
                 margin-bottom: $xs;
                 font-size: rem(20px);
             }
-            
+
             .button-main-action {
                 border-top-right-radius: 0px;
                 border-bottom-right-radius: 0px;
             }
-    
+
             .button-menu {
                 border-left: none;
                 border-top-left-radius: 0px;
                 border-bottom-left-radius: 0px;
             }
         }
-        
+
         .side-bar {
             border: 1px solid $border-color;
             margin: $lg 0 $lg $lg;
-            
+
             &-item {
                 padding: $sm;
             }
-            
+
             &-separator {
                 padding: $sm $sm $xs $sm;
             }
-                
+
             .image {
                 margin-top: 0;
             }
         }
-        
+
         .log-output {
             margin: $lg;
             margin-top: 0;
-        
+
             .terminal {
                 padding: $sm;
             }
         }
-        
+
         .auto-scroll {
             opacity: 0.2;
             margin: $md;
@@ -90,14 +90,14 @@ $lg: rem(24px);
             padding: $xs;
             background-color: #{"@bg_color"};
             transition: opacity ease 150ms;
-            
+
             &.visible {
                 opacity: 1;
             }
-            
+
             &-switcher {
                 margin-left: $xs;
-        
+
                 slider {
                     min-width: rem(16px);
                     min-height: rem(16px);
@@ -105,17 +105,17 @@ $lg: rem(24px);
             }
         }
     }
-    
+
     &-main {
         .docker-containers {
             &-filter {
                 margin: $lg;
             }
-            
+
             &-grid {
                 margin: $sm;
                 margin-top: 0;
-                
+
                 .docker-container {
                     margin: $sm;
                     border-radius: 3px;
@@ -126,34 +126,39 @@ $lg: rem(24px);
                     box-shadow:
                         outset-highlight("full"),
                         outset-shadow(2);
-                    
-                    &:focus, 
-                    &:selected, 
+
+                    &:focus,
+                    &:selected,
                     &:active {
-                        @if $color-scheme == "light" {
+                        @if $color-scheme=="light" {
                             border-color: #{'@accent_color'};
                         }
+
                         color: #{'@selected_fg_color'};
                         outline-color: #{'alpha(@accent_color, 0.3)'};
                         outline-width: rem(2px);
                         outline-style: solid;
                     }
-                    
+
                     &-preview-image {
                         margin-right: $sm;
+
+                        &:disabled {
+                            opacity: 0.4;
+                        }
                     }
 
                     &-name {
                         margin-bottom: $xs;
                     }
-                
+
                     &-actions {
                         margin-left: $sm;
                     }
-                
+
                     .image-button {
                         margin-left: $xs;
-                        
+
                         image {
                             margin: 0;
                         }
@@ -165,7 +170,7 @@ $lg: rem(24px);
 }
 
 @keyframes rotate {
-    to { 
-        -gtk-icon-transform: rotate(1turn); 
+    to {
+        -gtk-icon-transform: rotate(1turn);
     }
 }
