--- a/data/style/_main.scss
+++ b/data/style/_main.scss
@@ -205,6 +205,8 @@ $lg: rem(24px);
     }
 
     &-main {
+        background-color: #{"@bg_color"};
+        
         .docker-containers {
             &-filter {
                 margin: $lg;
